# OpenCL2-playground

./: .gitignore  CMakeLists.txt  README.md  config.cmake.hpp
include/: opencl_include.h  opencl_utils.hpp
kernels/: arrays.cl  test.cl
src/: main.cpp  opencl_utils.cpp
